--- a/src/app.css
+++ b/src/app.css
@@ -7,11 +7,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-image: linear-gradient(to right bottom, red, orange, yellow, green, blue, indigo, purple);
-  /* font-synthesis: none; */
-  /* text-rendering: optimizeLegibility; */
-  /* -webkit-font-smoothing: antialiased; */
-  /* -moz-osx-font-smoothing: grayscale; */
-  /* -webkit-text-size-adjust: 100%; */
+  height: 2000px;
 }
 
 /* 
